# TricycleGazebo_Sim

./: CMakeLists.txt  Gazebo.md  README.md  SDF.md  URDF.md
config/: chassis_motor.yaml
include/: tricycle_ctl.h
launch/: tricycle.launch
meshes/: bar.stl  wheel_frame.stl
src/: CMakeLists.txt  controller.cpp  tricycle_ctl.cpp
urdf/: chwheel.xacro  common.xacro  tricycle.urdf  tricycle.xacro
