############################################################################################
##################################### Generate Ros node  ###################################
############################################################################################
aux_source_directory(./                     ALL_SRC)

add_executable(${PROJECT_NAME}_node ${ALL_SRC})
target_link_libraries(${PROJECT_NAME}_node
        ${ALL_LIBS}
        )